--- a/client/index.html
+++ b/client/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uhno!</title>
+
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+
+    <script src='/js/components/header_nav.js' defer></script>
 </head>
 <body>
-    <nav>
-        <div class="logo">Logo</div><div class="navigation">Navigation</div><div class="slider">slider</div>
-    </nav>
+    <header id='header-nav'></header>
     <main>
         <section class="main-content">
             This is where the main sections stuff goes
