sign up works, error with actually pulling into DB

--- a/client/index.html
+++ b/client/index.html
@@ -10,12 +10,18 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
 
+    <script
+    type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"
+    defer> </script>
+
     <script src='/js/components/header_nav.js' defer></script>
+    <script src='/js/components/sign_up.js' defer></script>
 </head>
 <body>
     <header id='header-nav'></header>
     <main>
-        <section class="main-content">
+        <section id="main-content" class="main-content">
             This is where the main sections stuff goes
         </section>
         <section class="calender">Calender/schedule section</section>
