added the login form non functional

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
 
     <script src='/js/components/header_nav.js' defer></script>
     <script src='/js/components/sign_up.js' defer></script>
+    <script src='/js/components/login.js' defer></script>
 </head>
 <body>
     <header id='header-nav'></header>
