calendar setup (Not working)

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
 
     <script src='/js/components/header_nav.js' defer></script>
     <script src='/js/components/sign_up.js' defer></script>
+    <script src="/js/calendar/calendar.js" defer></script>
 </head>
 <body>
     <header id='header-nav'></header>
@@ -24,7 +25,10 @@
         <section id="main-content" class="main-content">
             This is where the main sections stuff goes
         </section>
-        <section class="calender">Calender/schedule section</section>
+        <section class="calendar">
+            <p>Google Calendar API Quickstart</p>
+
+        </section>
         <section class="chat">Chat section</section>
     </main>
     <footer>This is the footer</footer>
