Calendar request working

--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,6 @@
 
     <script src='/js/components/header_nav.js' defer></script>
     <script src='/js/components/sign_up.js' defer></script>
-    <script src="/js/calendar/calendar.js" defer></script>
 </head>
 <body>
     <header id='header-nav'></header>
@@ -26,7 +25,12 @@
             This is where the main sections stuff goes
         </section>
         <section class="calendar">
-            <p>Google Calendar API Quickstart</p>
+            <p>Calendar</p>
+            <div id='events-box'>
+                <ul id='events-list'>
+
+                </ul>
+            </div>
 
         </section>
         <section class="chat">Chat section</section>
