--- a/client/index.html
+++ b/client/index.html
@@ -9,11 +9,12 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <script
     type="text/javascript"
     src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"
-    defer> </script>
+    async> </script>
 
     <script src='/js/components/header_nav.js' defer></script>
     <script src='/js/components/sign_up.js' defer></script>
