added logic to show login/logout

--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
     src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"
     async> </script>
 
+    <script src='/js/storage.js' defer>    </script>
     <script src='/js/components/header_nav.js' defer></script>
     <script src='/js/components/sign_up.js' defer></script>
     <script src='/js/components/login.js' defer></script>
