--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,8 @@
     <script src='/js/components/header_nav.js' defer></script>
     <script src='/js/components/sign_up.js' defer></script>
     <script src='/js/components/login.js' defer></script>
+    <script src='/js/components/add_games.js' defer></script>
+
 </head>
 <body>
     <header id='header-nav'></header>
