models/events - create, findAll, delete

--- a/client/index.html
+++ b/client/index.html
@@ -24,8 +24,8 @@
         <section id="main-content" class="main-content">
             This is where the main sections stuff goes
         </section>
-        <section class="calendar">
-            <p>Calendar</p>
+        <section class="event-container">
+            <h2>Your Events</h2>
             <div id='events-box'>
                 <ul id='events-list'>
 
