--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,30 +11,22 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
 
-    <script
-    type="text/javascript"
-    src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"
-    defer> </script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" defer> </script>
 
     <script src='/js/components/header_nav.js' defer></script>
     <script src='/js/components/sign_up.js' defer></script>
 </head>
+
 <body>
     <header id='header-nav'></header>
     <main>
         <section id="main-content" class="main-content">
             This is where the main sections stuff goes
         </section>
-        <section class="event-container">
-            <h2>Your Events</h2>
-            <div id='events-box'>
-                <ul id='events-list'>
-
-                </ul>
-            </div>
-        </section>
+        <section class="event-container" id='event-container'></section>
         <section class="chat">Chat section</section>
     </main>
     <footer>This is the footer</footer>
 </body>
+
 </html>
