initialize.js added & events.js updated

--- a/client/index.html
+++ b/client/index.html
@@ -14,10 +14,14 @@
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" defer> </script>
 
-    <script src='/js/storage.js' defer>    </script>
+    <script src='/js/storage.js' defer></script>
+    <script src='/js/initialize.js' defer></script>
     <script src='/js/components/header_nav.js' defer></script>
     <script src='/js/components/sign_up.js' defer></script>
     <script src='/js/components/login.js' defer></script>
+    <script src='/js/components/events.js' defer></script>
+    
+
 </head>
 
 <body>
