added "addFriend" to header_nav, created add_friend component

--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,8 @@
     <script src='/js/components/sign_up.js' defer></script>
     <script src='/js/components/login.js' defer></script>
     <script src='/js/components/events.js' defer></script>
-    
+    <script src='/js/components/add_friend.js' defer></script>
+
 
 </head>
 
