--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,7 @@
     <script src='/js/components/login.js' defer></script>
     <script src='/js/components/add_games.js' defer></script>
     <script src='/js/components/events.js' defer></script>
+    <script src='/js/components/add_friend.js' defer></script>
     
 
 </head>
