--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,7 @@
         <section class="event-container" id='event-container'></section>
 
             </section>
-            <section class="chat">Chat section</section>
+            <section id="chat" class="chat">Chat section</section>
         </main>
         <footer class='content'>This is the footer</footer>
     </main>
