--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
     <script src='/js/components/sign_up.js' defer></script>
     <script src='/js/components/login.js' defer></script>
     <script src='/js/components/add_games.js' defer></script>
-
+    <script src='/js/components/library.js' defer></script>
 </head>
 <body>
     <header id='header-nav'></header>
