--- a/client/index.html
+++ b/client/index.html
@@ -10,12 +10,15 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
 
     <script
     type="text/javascript"
     src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"
     async> </script>
 
+    <script src='/js/particles.js' defer>    </script>
     <script src='/js/storage.js' defer>    </script>
     <script src='/js/components/header_nav.js' defer></script>
     <script src='/js/components/sign_up.js' defer></script>
@@ -23,22 +26,22 @@
     <script src='/js/components/add_games.js' defer></script>
     <script src='/js/components/library.js' defer></script>
 </head>
-<body>
-    <header id='header-nav'></header>
-    <main>
-        <section id="main-content" class="main-content">
-            This is where the main sections stuff goes
-        </section>
-        <section class="event-container">
-            <h2>Your Events</h2>
-            <div id='events-box'>
-                <ul id='events-list'>
-
-                </ul>
-            </div>
-        </section>
-        <section class="chat">Chat section</section>
-    </main>
-    <footer>This is the footer</footer>
+<body id="particles-js">
+        <header class='content' id='header-nav'></header>
+        <main class='content'>
+            <section id="main-content" class="main-content">
+                This is where the main sections stuff goes
+            </section>
+            <section class="event-container">
+                <h2>Your Events</h2>
+                <div id='events-box'>
+                    <ul id='events-list'>
+                        
+                    </ul>
+                </div>
+            </section>
+            <section class="chat">Chat section</section>
+        </main>
+        <footer class='content'>This is the footer</footer>
 </body>
 </html>
