--- a/client/message_board.html
+++ b/client/message_board.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Uhno!</title>
+
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" async> </script>
+
+    <script src='/js/storage.js' defer>    </script>
+    <script src='/js/components/header_nav.js' defer></script>
+    <script src='/js/components/sign_up.js' defer></script>
+    <script src='/js/components/login.js' defer></script>
+    <script src='/js/components/add_games.js' defer></script>
+
+    <script src='/js/components/chat.js' defer></script>
+    <script src='/js/components/message_board.js' defer></script>
 </head>
+
 <body>
-    
+    <header id='header-nav'></header>
+    <main>
+        <section id="main-content" class="main-content">
+            <section id="chat" class="chat">
+            <h2>Message Board</h2>
+                <section id="chat-topics" class="chat-topics">
+                </section>
+            </section>
+        </section>
+        <section class="event-container">
+            <h2>Your Events</h2>
+            <div id='events-box'>
+                <ul id='events-list'>
+
+                </ul>
+            </div>
+        </section>
+    </main>
+    <footer>This is the footer</footer>
 </body>
+
 </html>
