--- a/client/index.html
+++ b/client/index.html
@@ -14,15 +14,10 @@
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
 
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" defer> </script>
-=======
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" async> </script>
->>>>>>> 2af8ab6 (chat)
 
->>>>>>> e617133 (chat)
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" async> </script>
+
     <script src='/js/particles.js' defer>    </script>
     <script src='/js/storage.js' defer>    </script>
     <script src='/js/initialize.js' defer></script>
@@ -48,7 +43,7 @@
 
             </section>
             <section id="chat" class="chat">
-                <a href="message_board.html"><h2>Message Board</h2></a>
+             <h2>Message Board</h2>
                 <section id="chat-topics" class="chat-topics">
     
     
