style css tweak

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/event.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
@@ -40,6 +41,8 @@
                 This is where the main sections stuff goes
             </section>
         <section class="event-container" id='event-container'></section>
+        
+        </section>
 
             </section>
             <section id="chat" class="chat">
