Put https in particles script on index for heroku

--- a/client/index.html
+++ b/client/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="/css/style.css">
     
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" defer> </script>
 
