--- a/client/index.html
+++ b/client/index.html
@@ -48,7 +48,9 @@
             </section>
 
             <section id="chat" class="chat">
+                <div class="chat-head">
              <h2>Message Board</h2>
+            </div>
                 <section id="chat-topics" class="chat-topics">
     
                 </section>
