--- a/client/index.html
+++ b/client/index.html
@@ -57,7 +57,11 @@
             </section>
             
         </main>
-        <footer class='content'>This is the footer</footer>
+        <footer class='content'>
+
+            <h3>Made by Matt, Dustin, Hamid and Jimmy</h3>
+
+        </footer>
     </main>
 </body>
 
